20240511 JDK执行器URL生成逻辑优化